force-app/main/default/objects/EcoDrive__c/EcoDrive__c.object-meta.xml
<CustomObject>
    <label>EcoDrive</label>
    <nameField>
        <label>EcoDrive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EcoDrives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>