force-app/main/default/objects/EcoDrive__c/fields/Assigned_Officer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Officer</relationshipLabel>
    <relationshipName>Assigned_Officer</relationshipName>
    <type>Lookup</type>
</CustomField>