force-app/main/default/objects/EcoDrive__c/fields/Drive_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Drive_Image_URL__c</fullName>
    <label>Drive Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>