force-app/main/default/objects/EcoDrive__c/fields/EcoProgram__c.field-meta.xml
<CustomField>
    <fullName>EcoProgram__c</fullName>
    <label>EcoProgram</label>
    <referenceTo>EcoProgram__c</referenceTo>
    <relationshipLabel>EcoDrives</relationshipLabel>
    <relationshipName>EcoDrives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>