force-app/main/default/objects/EcoDrive__c/fields/Remaining_Slots__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Slots__c</fullName>
    <formula>Capacity__c -  Total_Participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>