force-app/main/default/objects/EcoDrive__c/fields/Total_Hours_Contributed__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Contributed__c</fullName>
    <label>Total Hours Contributed</label>
    <summarizedField>Drive_Participation__c.Hours_Contributed__c</summarizedField>
    <summaryForeignKey>Drive_Participation__c.EcoDrive__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>