force-app/main/default/objects/EcoDrive__c/fields/Venue_Details__c.field-meta.xml
<CustomField>
    <fullName>Venue_Details__c</fullName>
    <label>Venue Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>