force-app/main/default/objects/EcoDrive__c/validationRules/Cannot_create_drive_for_a_completed_prog.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_create_drive_for_a_completed_prog</fullName>
    <active>true</active>
    <description>Cannot create drive for a completed program.</description>
    <errorConditionFormula>ISPICKVAL( EcoProgram__r.Status__c , &quot;Completed&quot;)</errorConditionFormula>
    <errorMessage>Cannot create drive for a completed program.</errorMessage>
</ValidationRule>