force-app/main/default/objects/EcoDrive__c/validationRules/Capacity_must_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_must_be_greater_than_zero</fullName>
    <active>true</active>
    <description>Capacity must be greater than zero.</description>
    <errorConditionFormula>Capacity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Capacity__c</errorDisplayField>
    <errorMessage>Capacity must be greater than zero.</errorMessage>
</ValidationRule>