force-app/main/default/objects/EcoDrive__c/validationRules/Drive_cannot_be_marked_Completed_before.validationRule-meta.xml
<ValidationRule>
    <fullName>Drive_cannot_be_marked_Completed_before</fullName>
    <active>true</active>
    <description>Drive cannot be marked Completed before its date.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    Drive_Date__c &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Drive cannot be marked Completed before its date.</errorMessage>
</ValidationRule>