force-app/main/default/objects/EcoDrive__c/validationRules/Drive_Date_must_be_between_Program_Launc.validationRule-meta.xml
<ValidationRule>
    <fullName>Drive_Date_must_be_between_Program_Launc</fullName>
    <active>true</active>
    <description>Drive Date must be between Program Launch Date and 6 months from Program Launch Date.</description>
    <errorConditionFormula>AND(
    ISCHANGED(Drive_Date__c),
    OR(
        Drive_Date__c &lt;  EcoProgram__r.Launch_Date__c,
        Drive_Date__c &gt; ADDMONTHS( EcoProgram__r.Launch_Date__c , 6)
    )
)</errorConditionFormula>
    <errorDisplayField>Drive_Date__c</errorDisplayField>
    <errorMessage>Drive Date must be between Program Launch Date and 6 months from Program Launch Date.</errorMessage>
</ValidationRule>