force-app/main/default/objects/EcoDrive__c/validationRules/Drives_can_only_be_created_for_Active_Pr.validationRule-meta.xml
<ValidationRule>
    <fullName>Drives_can_only_be_created_for_Active_Pr</fullName>
    <active>true</active>
    <description>Drives can only be created for Active Programs.</description>
    <errorConditionFormula>NOT(
    ISPICKVAL( EcoProgram__r.Status__c , &quot;Active&quot;)
)</errorConditionFormula>
    <errorMessage>Drives can only be created for Active Programs.</errorMessage>
</ValidationRule>