force-app/main/default/objects/EcoDrive__c/validationRules/End_Time_must_be_after_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_must_be_after_Start_Time</fullName>
    <active>true</active>
    <description>End Time must be after Start Time.</description>
    <errorConditionFormula>End_Time__c &lt; Start_Time__c</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time must be after Start Time.</errorMessage>
</ValidationRule>