force-app/main/default/objects/EcoDrive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Remaining_Slots__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>EcoProgram__c</columns>
    <columns>Drive_Date__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>