force-app/main/default/objects/EcoDrive__c/listViews/Upcoming_Drives.listView-meta.xml
<ListView>
    <fullName>Upcoming_Drives</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Planned</value>
    </filters>
    <label>Upcoming Drives</label>
</ListView>